--- a/gb/20/11/16/n12553322.md
+++ b/gb/20/11/16/n12553322.md
@@ -1,63 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ddcabe320/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ddcabe320/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ddcabe320/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ddcabe320/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ddcabe320/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ddcabe320/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ddcabe320/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ddcabe320/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>拦截中国转口货柜 高雄关查扣走私烟100万包</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/469619-600x400.jpg" />
 <h6>财政部关务署高雄关日前查获中国转口菲律宾货柜中有 2000箱走私未税烟，估达100万包，市价逾新台币7000 万元。 （高雄关提供）
 </h6>
 <hr>
-<p>【大纪元2020年11月16日讯】（大纪元记者袁世钢台湾高雄报导）继澎湖海巡队于上月30日查获史上最大规模走私香烟案，当场查扣市值超过新台币5亿元的552万余包香烟后，财政部关务署<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%85%B3.md#1">高雄关</a>13日再传捷报，于高雄港查扣企图闯关入境的走私未税烟约100万包，市值估计高达新台币7千万元。</p>
-<p><ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%85%B3.md#1">高雄关</a>16日表示，海关查缉人员日前利用风险管理机制过滤分析高风险标的后，锁定2个非常可疑的40英尺<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E8%B4%A7%E6%9F%9C.md#1">货柜</a>；这2个货柜自<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>广东广澳港起运，预定<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E8%BD%AC%E5%8F%A3.md#1">转口</a>至菲律宾苏比克湾；申报货名为“缠绕膜（STRETCH FILM）”。</p>
-<p>高雄关待货运船于13日停靠高雄港70号码头并卸货后，立即将这2个可疑<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E8%B4%A7%E6%9F%9C.md#1">货柜</a>开柜查验，并查获由黑色防水袋、编织袋包裹的<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E8%B5%B0%E7%A7%81%E7%83%9F.md#1">走私烟</a>约2千箱，初步估计约100万包，市值约7千万元。高雄关表示，由于货品与提单、舱单申报内容不符，因此依违反《海关缉私条例》、《烟酒管理法》等相关规定查扣。</p>
-<p>海巡署上月30日透过岸际雷达发现，2艘货轮在澎湖海域内诡异的并靠，经澎湖海巡队前往查缉发现，1艘主要往来台湾与<ahref="https://github.com/ddcabe320/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>福州之间的比利时籍中国货轮“铭霞号”，正与1艘中国籍无名铁壳船有接驳情形；登船查验后，于货舱内查获1万1千余箱中国走私香烟，约552万5千包，初估市值约新台币5亿元。◇</p>
+<p>【大纪元2020年11月16日讯】（大纪元记者袁世钢台湾高雄报导）继澎湖海巡队于上月30日查获史上最大规模走私香烟案，当场查扣市值超过新台币5亿元的552万余包香烟后，财政部关务署<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%85%B3.md#1">高雄关</a>13日再传捷报，于高雄港查扣企图闯关入境的走私未税烟约100万包，市值估计高达新台币7千万元。</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E5%85%B3.md#1">高雄关</a>16日表示，海关查缉人员日前利用风险管理机制过滤分析高风险标的后，锁定2个非常可疑的40英尺<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B4%A7%E6%9F%9C.md#1">货柜</a>；这2个货柜自<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>广东广澳港起运，预定<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BD%AC%E5%8F%A3.md#1">转口</a>至菲律宾苏比克湾；申报货名为“缠绕膜（STRETCH FILM）”。</p>
+<p>高雄关待货运船于13日停靠高雄港70号码头并卸货后，立即将这2个可疑<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B4%A7%E6%9F%9C.md#1">货柜</a>开柜查验，并查获由黑色防水袋、编织袋包裹的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B5%B0%E7%A7%81%E7%83%9F.md#1">走私烟</a>约2千箱，初步估计约100万包，市值约7千万元。高雄关表示，由于货品与提单、舱单申报内容不符，因此依违反《海关缉私条例》、《烟酒管理法》等相关规定查扣。</p>
+<p>海巡署上月30日透过岸际雷达发现，2艘货轮在澎湖海域内诡异的并靠，经澎湖海巡队前往查缉发现，1艘主要往来台湾与<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>福州之间的比利时籍中国货轮“铭霞号”，正与1艘中国籍无名铁壳船有接驳情形；登船查验后，于货舱内查获1万1千余箱中国走私香烟，约552万5千包，初估市值约新台币5亿元。◇</p>
 <p>责任编辑：晓玫</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/14/2/9/n4078688.md#1">高雄关查获市值2千万私烟</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/14/3/26/n4116027.md#1">床垫货柜藏私烟  海关抄近千箱</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/17/7/13/n9389542.md#1">台高雄关查获走私烟丝  可制烟120万包</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/17/8/24/n9562537.md#1">台财部防堵私烟 罚锾拟提高至1千万元</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/17/10/16/n9738652.md#1">高港史上最大私烟市价逾2.5亿“500万包烟”动员千人清算</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12553331.md#1">台新银理专窃客户3亿元 北检声押获准</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12553318.md#1">丁怡铭闪辞 陈其迈吁记取教训</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12553316.md#1">人权会职权法恐违宪扩权 柯建铭吁撤回</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12553517.md#1">学者：川普证明 只有对中强硬才有效</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12553368.md#1">台湾中研院研发全球首株抗体 有助癌症免疫治疗</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/2/9/n4078688.md#1">高雄关查获市值2千万私烟</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/3/26/n4116027.md#1">床垫货柜藏私烟  海关抄近千箱</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/7/13/n9389542.md#1">台高雄关查获走私烟丝  可制烟120万包</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/8/24/n9562537.md#1">台财部防堵私烟 罚锾拟提高至1千万元</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/10/16/n9738652.md#1">高港史上最大私烟市价逾2.5亿“500万包烟”动员千人清算</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753495.md#1">东欧民众未意识中共威胁 对台湾议题分歧</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753517.md#1">中资水龙头渗不停 台民团吁弹劾失职官员</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753474.md#1">台废弃物成长率超过GDP 环团提源头减量修法</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753459.md#1">台北市远距教学2周 家长会：成绩变差</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753448.md#1">朱立伦：国民党是亲美政党 续抗共产主义</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/ddcabe320/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/6/17/n3289382.md#1" target="_blank">探寻真相 兼听则明 ——法轮功小问答</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/11/n12540543.md#1">拜登宣布当选总统 圣经专家：川普仍会胜出</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/10/n12537654.md#1">张爱玲和弟弟 一个最悲凉的手足亲情的故事</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/9/n12535003.md#1">【命理】八字解盘 拜登能入主白宫吗？</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12547437.md#1">【重播】美50州集会挺川普 吁停止窃选</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551389.md#1">【薇羽看世间】川普政府一石二鸟  ?</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550057.md#1">【十字路口】美大选重磅爆料 他安排选举结果</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/14/n12549021.md#1">【大选更新11·14】川普支持者遭袭受伤</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548081.md#1">川普宣布国家进入紧急状态 应对中共威胁</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/14/n12548711.md#1">美议员爆料 外企Scytl有偷换选票全部证据</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548015.md#1">刘德华新片励志感人 亲笔信秀一手好字</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548178.md#1">自曝坐网约车喝到剩水 张馨予直呼难受又后怕</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12547700.md#1">黄耀明演唱会忆中环感慨落泪 吁港人勿收声</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/15/n12550309.md#1">日本警犬找人却半路开溜 警方还得派人找它</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12547495.md#1">吃对健脑防失智！7种食物让大脑变年轻</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12547643.md#1">肺像菜瓜布、呼吸力变差？2个动作提升肺功能</a></li>
-<li><a href="https://github.com/ddcabe320/djy/blob/master/gb/20/11/13/n12548179.md#1">说谎原来这么可怕！给身体带来6个变化</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ddcabe320/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ddcabe320/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/16/n12553322.htm">拦截中国转口货柜 高雄关查扣走私烟100万包</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/16/n12553322.htm">拦截中国转口货柜 高雄关查扣走私烟100万包</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ddcabe320/djy/blob/master/gb/20/11/16/n12553322.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ddcabe320/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ddcabe320/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ddcabe320/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ddcabe320/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddcabe320/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/11/16/n12553322.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
